Closed Bug 539354 Opened 15 years ago Closed 14 years ago

Horizontal Scrolling Fails to Repaint Correctly when the Window is very Thin

Categories

(Core :: Web Painting, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a4
Tracking Status
status1.9.2 --- ?

People

(Reporter: drew, Assigned: roc)

Details

(Keywords: regression, Whiteboard: [needs new patch for 192])

Attachments

(2 files)

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2b5) Gecko/20091204 Firefox/3.6b5

When I make a webpage extremely small horizontally and then scroll using the right arrow button, it shows what had been on the very right side of the window over and over again.  See the attached screenshot for details.

This is NOT reproducible on my Windows Vista machine.

Steps to Reproduce:
1. Make a window with lots of horizontal text very small horizontally so that a scroll bar shows up.
2. Scroll to the right quickly using the right arrow buttons.
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.3a1pre) Gecko/20100111 Firefox/3.7a1pre

I can reproduce the bug.
Component: General → Layout: View Rendering
Product: Firefox → Core
QA Contact: general → layout.view-rendering
Summary: Horizontal Scrolling Fails to Refresh Correctly when the Window is made very Thin → Horizontal Scrolling Fails to Repaint Correctly when the Window is very Thin
Version: 3.6 Branch → Trunk
I don't know how long this has been going on, but the problem is that when we do [mView scrollRect:by:], and part of the rectangle is outside the window, we expect to get invalidates for the area that was scrolled into view that was outside the window (and therefore is not actually updated by [mView scrollRect:by:] ... but we don't.
Attached patch fixSplinter Review
Assignee: nobody → roc
Attachment #421564 - Flags: review?(mstange)
+    NSRect rootViewRect = [rootView frame];
+    rootViewRect.origin = NSMakePoint(0, 0);

You can use [rootView bounds] instead, that already has the origin at (0, 0).

What is the actual size of the current view we're in? Does it extend beyond the rootView?
(In reply to comment #5)
> What is the actual size of the current view we're in? Does it extend beyond the
> rootView?

Yes. When you make the Firefox window very narrow, at some point we can't make the window contents any smaller so they start overflowing to the right.
(That seems like a chrome bug, but we should still fix this bug.)
Attachment #421564 - Flags: review?(mstange) → review+
Whiteboard: [needs landing]
http://hg.mozilla.org/mozilla-central/rev/0fec65bf4b56
Status: NEW → RESOLVED
Closed: 14 years ago
Keywords: regression
Resolution: --- → FIXED
Whiteboard: [needs landing]
Comment on attachment 421564 [details] [diff] [review]
fix

this is probably a regression from 1.9.2 scrolling changes
Attachment #421564 - Flags: approval1.9.2.1?
Comment on attachment 421564 [details] [diff] [review]
fix

Moving flag, not sure it's worth the risk on branch since it's a pretty low frequency use case, right?
Attachment #421564 - Flags: approval1.9.2.2? → approval1.9.2.3?
Comment on attachment 421564 [details] [diff] [review]
fix

Approved for 1.9.2.4, a=dveditz for release-drivers
Attachment #421564 - Flags: approval1.9.2.4? → approval1.9.2.4+
Whiteboard: [needs 192 landing]
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/7360b140304c
Keywords: checkin-needed
Whiteboard: [needs 192 landing]
Target Milestone: --- → mozilla1.9.3a4
After pushing 7360b140304c changeset, builds failure;

OS X 10.5.2 mozilla-1.9.2 build on 2010/04/12 21:20:17
s: bm-xserve19
make[7]: *** [nsChildView.o] Error 1


OS X 10.5.2 mozilla-1.9.2 leak test build on 2010/04/12 21:20:17
s: bm-xserve17
make[6]: *** [nsChildView.o] Error 1
Burned, baby, burned... my attempted merge failed. This patch really doesn't apply to 1.9.2 at all and needs some work...

backout:
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/7a4f431b5629
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/e13313cdac91
Whiteboard: [needs new patch for 191]
Whiteboard: [needs new patch for 191] → [needs new patch for 192]
Attachment #421564 - Flags: approval1.9.2.4+
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: