Bug 539354. When scrolling an area that was partially outside the window into view, make sure we invalidate the destination area on Mac. r=mstange

--HG--
extra : rebase_source : 4cb48c2bc49926d72b00bf3baa59465c149b6d6c